Localization II, This Time It's Personal
Fixed lua error introduced from git file conflict shenanigans in sh_unlocks.lua

Localization strings for shop.

Updated error screens for map info.

--- a/resource/localization/en-PT/jazztronauts.properties
+++ b/resource/localization/en-PT/jazztronauts.properties
@@ -95,6 +95,12 @@ jazz.store.welcome=Ahoy matey. What can I be gettin' ya?
 jazz.store.upgrade=Upgradin' me tools!
 jazz.store.store=Yer wares, if ye please!
 jazz.store.chat=Jus' 'ere ta gab!
+jazz.store.requires=YE BE NEEDIN' %1%
+jazz.store.toollabel=Yarr, Tools
+jazz.store.upgradelabel=Avast, Upgrades
+#mind the leading and/or trailing space!
+jazz.store.listing= %1% - £%2%
+jazz.store.price= £%1% 
 #==============================================================================
 #	MISSIONS
 #==============================================================================
