--- a/resource/localization/en/jazztonauts.properties
+++ b/resource/localization/en/jazztonauts.properties
@@ -96,6 +96,12 @@ jazz.store.welcome=Welcome back. What can I get you?
 jazz.store.upgrade=Upgrade tools!
 jazz.store.store=Store, please!
 jazz.store.chat=Just here to chat!
+jazz.store.requires=REQUIRES %1%
+jazz.store.toollabel=Tools
+jazz.store.upgradelabel=Upgrades
+#mind the leading and/or trailing space!
+jazz.store.listing= %1% - $%2%
+jazz.store.price= $%1% 
 #==============================================================================
 #	MISSIONS
 #==============================================================================
