Localization III, The Localizationing
Waiting Screen escaped my grasp, until now. I will also now stop saying "I think that's everything" in the group chat, there's always something else lurking.

Also, fixed a booboo on the trolley radio. I don't know why it worked the first time I did it.

--- a/resource/localization/en-PT/jazztronauts.properties
+++ b/resource/localization/en-PT/jazztronauts.properties
@@ -57,6 +57,7 @@ jazz.hud.earned=%1% earn'd £%2%
 jazz.hud.spent=%1% spent £%2%
 jazz.hud.found=%1% looted %2% shards
 jazz.hud.kys=Hol' mouse 1 an' mouse 2 ta respawn
+jazz.hud.waiting=WAITIN' FER CREWMATES
 jazz.shards.partial=%1%/%2% shards
 jazz.shards.partialcollected=%1%/%2% shards pilfered
 jazz.shards.one=A single shard remains
