--- a/resource/localization/en/jazztonauts.properties
+++ b/resource/localization/en/jazztonauts.properties
@@ -58,6 +58,7 @@ jazz.hud.earned=%1% earned $%2%
 jazz.hud.spent=%1% spent $%2%
 jazz.hud.found=%1% found %2% shards
 jazz.hud.kys=Hold mouse 1 + mouse 2 to respawn
+jazz.hud.waiting=WAITING FOR PLAYERS
 jazz.shards.partial=%1%/%2% shards
 jazz.shards.partialcollected=%1%/%2% shards collected
 jazz.shards.one=1 shard remains
