Minor Localization fix
Changed localization strings for Run upgrades to call for "run" and not "stan"

--- a/resource/localization/en/jazztonauts.properties
+++ b/resource/localization/en/jazztonauts.properties
@@ -43,8 +43,8 @@ jazz.weapon.stan.upgrade.speed.desc=Decreases warm up time
 #Run
 jazz.weapon.run=Run
 jazz.weapon.run.desc=Jump higher and run faster.
-jazz.weapon.stan.upgrade.nofall=Ignore Fall Damage
-jazz.weapon.stan.upgrade.nofall.desc=Fall from any height, and while Run is equipped, you will take zero fall damage.
+jazz.weapon.run.upgrade.nofall=Ignore Fall Damage
+jazz.weapon.run.upgrade.nofall.desc=Fall from any height, and while Run is equipped, you will take zero fall damage.
 #misc
 jazz.weapon.buscaller=Portable Bus Stop
 jazz.weapon.physlua=Lua Physics Gun
