--- a/resource/localization/en/jazztonauts.properties
+++ b/resource/localization/en/jazztonauts.properties
@@ -45,6 +45,8 @@ jazz.weapon.run=Run
 jazz.weapon.run.desc=Jump higher and run faster.
 jazz.weapon.run.upgrade.nofall=Ignore Fall Damage
 jazz.weapon.run.upgrade.nofall.desc=Fall from any height, and while Run is equipped, you will take zero fall damage.
+jazz.weapon.run.upgrade.highjump=Charge Jump
+jazz.weapon.run.upgrade.highjump.desc=With Run equipped, crouch down for a few seconds to charge up a super jump!
 #misc
 jazz.weapon.buscaller=Portable Bus Stop
 jazz.weapon.physlua=Lua Physics Gun
