--- a/resource/localization/en-PT/jazztronauts.properties
+++ b/resource/localization/en-PT/jazztronauts.properties
@@ -42,8 +42,10 @@ jazz.weapon.stan.upgrade.speed.desc=Decreases warm up time
 #Run
 jazz.weapon.run=Run
 jazz.weapon.run.desc=Jump high'r an' run fast'r.
-jazz.weapon.stan.upgrade.nofall=Walkin' the Plank-proof
-jazz.weapon.stan.upgrade.nofall.desc=If ye fall while yer Run is equipped, yer not takin' even a wee bit'o'fall damage.
+jazz.weapon.run.upgrade.nofall=Walkin' the Plank-proof
+jazz.weapon.run.upgrade.nofall.desc=If ye fall while yer Run is equipped, yer not takin' even a wee bit'o'fall damage.
+jazz.weapon.run.upgrade.highjump=High Jump
+jazz.weapon.run.upgrade.highjump.desc=With yer Run equipped, duck yerself down fer a few seconds ta charge up a super jump!
 #misc
 jazz.weapon.buscaller=Portable Port
 jazz.weapon.physlua=Lua Physics Gun
