--- a/resource/localization/en/jazztonauts.properties
+++ b/resource/localization/en/jazztonauts.properties
@@ -164,3 +164,29 @@ jazz.gamemode.wait=Wait for players at the start of a level
 jazz.gamemode.wait.help=Whether or not to enable the waiting for players whiteboard at all.
 jazz.gamemode.localaddons=Include local addons in map randomizer
 jazz.gamemode.localaddons.help=If enabled, maps from locally installed workshop addons will be included when rolling for a map.
+#==============================================================================
+#	LEVEL SELECT MULTI-LANGUAGE (no need to add these to other files!) --TODO: just running these through google translate for testing purposes. Need to make sure they're proper translations!
+#==============================================================================
+jazz.levelselect.fail.en=SCAN FAILURE
+jazz.levelselect.fail.jp=スキャン失敗
+jazz.levelselect.fail.fr=ÉCHEC DE L'ANALYSE
+jazz.levelselect.fail.es=FALLO DE ESCANEO
+jazz.levelselect.fail.uk=ПОМИЛКА СКАНУВАННЯ
+#nomap
+jazz.levelselect.fail.nomap.en=SCAN FAILURE - ADDON HAS NO MAPS
+jazz.levelselect.fail.nomap.jp=スキャン失敗 - アドオンにはマップがありません
+jazz.levelselect.fail.nomap.fr=ÉCHEC DE L'ANALYSE - L'ADDON N'A PAS DE CARTES
+jazz.levelselect.fail.nomap.es=FALLO DE ESCANEO - AÑADIR NO TIENE MAPAS
+jazz.levelselect.fail.nomap.uk=ПОМИЛКА СКАНУВАННЯ - ДОПОВНЕННЯ НЕ МАЄ КАРТ
+#network
+jazz.levelselect.fail.network.en=SCAN FAILURE - FAILED TO DOWNLOAD
+jazz.levelselect.fail.network.jp=スキャン失敗 - ダウンロードに失敗しました
+jazz.levelselect.fail.network.fr=ÉCHEC DE L'ANALYSE - ÉCHEC DU TÉLÉCHARGEMENT
+jazz.levelselect.fail.network.es=FALLO DE ESCANEO - ERROR AL DESCARGAR
+jazz.levelselect.fail.network.uk=ПОМИЛКА СКАНУВАННЯ - НЕ ВДАЛОСЯ ЗАВАНТАЖИТИ
+#nospace
+jazz.levelselect.fail.nospace.en=SCAN FAILURE - DISK FULL
+jazz.levelselect.fail.nospace.jp=スキャン失敗 - ディスクがいっぱいです
+jazz.levelselect.fail.nospace.fr=ÉCHEC DE L'ANALYSE - DISQUE PLEIN
+jazz.levelselect.fail.nospace.es=FALLO DE ESCANEO - DISCO LLENO
+jazz.levelselect.fail.nospace.uk=ПОМИЛКА СКАНУВАННЯ - ДИСК ПОВНИЙ
