Hacking Googles should be capitalized

--- a/resource/localization/en/jazztonauts.properties
+++ b/resource/localization/en/jazztonauts.properties
@@ -32,7 +32,7 @@ jazz.weapon.snatcher.upgrade.wspeed.desc=Steal the world 100% faster
 jazz.weapon.hacker=Hacking Goggles
 jazz.weapon.hacker.desc=Peek into the inner I/O workings of the map
 jazz.weapon.hacker.upgrade.io=Privilege Escalation
-jazz.weapon.hacker.upgrade.io.desc=Enables write access on the hacking goggles to manually trigger map I/O events
+jazz.weapon.hacker.upgrade.io.desc=Enables write access on the Hacking Goggles to manually trigger map I/O events
 #Stan
 jazz.weapon.stan=Stan
 jazz.weapon.stan.desc=Teleport through solid walls, brushes, and playerclips by summoning the power of Stan
