--- a/resource/localization/en/jazztonauts.properties
+++ b/resource/localization/en/jazztonauts.properties
@@ -121,7 +121,7 @@ jazz.mission.cactus=Steal a potted cactus
 jazz.mission.crates=Find %1% storage crates
 jazz.mission.cars=Acquire %1% cars
 jazz.mission.melons=Find %1% watermelon
-jazz.mission.gas=Find %1% gas tanks
+jazz.mission.propane=Find %1% propane tanks
 jazz.mission.washers=Find %1% washing machines
 jazz.mission.antlions=Find %1% antlions
 #Pianist
