More missionlist tweaks
Fixed up radio quest logic, also now allow jukeboxes
Switched doll hunt to string search rather than specific list
Switched washing machines to string search rather than specific list
Antlions now include antlion nest props.
Further increased what counts as a document, beer

Updated Cellist mission #5 to match text

More dialog tweaks

--- a/resource/localization/en/jazztonauts.properties
+++ b/resource/localization/en/jazztonauts.properties
@@ -116,7 +116,8 @@ jazz.mission.gasbeer=Collect %1% gas cans and beer bottles
 jazz.mission.chems=Collect %1% random chemicals
 jazz.mission.paint=Collect %1% paintcans
 jazz.mission.drk=Kidnap Dr. Kleiner
-jazz.mission.cactus=Steal a potted cactus
+jazz.mission.cactus=Steal a potted cactus #old mission 5
+jazz.mission.milk=Borrow some milk
 #Bartender
 jazz.mission.crates=Find %1% storage crates
 jazz.mission.cars=Acquire %1% cars
