--- a/resource/localization/en-PT/jazztronauts.properties
+++ b/resource/localization/en-PT/jazztronauts.properties
@@ -91,6 +91,7 @@ jazz.message.brush=brush
 jazz.message.brushes=brushes
 jazz.message.prop=prop
 jazz.message.props=props
+jazz.bus.bar=th' tavern
 #==============================================================================
 #	STORE
 #==============================================================================
@@ -115,7 +116,8 @@ jazz.mission.gasbeer=Pilfer %1% jerrycans and bottles o' rum
 jazz.mission.chems=Ransack %1% assorted substances
 jazz.mission.paint=Loot %1% buckets o' paint
 jazz.mission.drk=Kidnap Dr. Kleiner
-jazz.mission.cactus=Get yerself a potted cactus
+jazz.mission.cactus=Get yerself a potted cactus #old mission 5
+jazz.mission.milk=Get yerself some milk
 #Bartender
 jazz.mission.crates=Pilfer %1% cargo crates
 jazz.mission.cars=Ransack %1% carriages
