Missed Localization, II
Localized spawnmenu

Also fixed Jazztronauts weapons' icons not showing in the Jazztronauts spawn menu.

--- a/resource/localization/en/jazztonauts.properties
+++ b/resource/localization/en/jazztonauts.properties
@@ -50,6 +50,15 @@ jazz.weapon.run.upgrade.highjump.desc=With Run equipped, crouch down for a few s
 #misc
 jazz.weapon.buscaller=Portable Bus Stop
 jazz.weapon.physlua=Lua Physics Gun
+#spawnmenu
+jazz.gmodspawn=GMod Spawnmenu
+jazz.gmodspawn.desc=Buy back your pride and joy, the gmod spawn menu. Spawn anything -- for a price.
+#holy fuck how did they not have this in their list
+jazz.gmodspawn.props=Props
+jazz.gmodspawn.props.desc=Spawn your props
+jazz.gmodspawn.weapons.desc=Guns
+jazz.gmodspawn.sandbox=Sandbox Spawnmenu
+jazz.gmodspawn.sandbox.desc=Dogs?
 #==============================================================================
 #	HUD/HUB
 #==============================================================================
@@ -117,7 +126,8 @@ jazz.mission.gasbeer=Collect %1% gas cans and beer bottles
 jazz.mission.chems=Collect %1% random chemicals
 jazz.mission.paint=Collect %1% paintcans
 jazz.mission.drk=Kidnap Dr. Kleiner
-jazz.mission.cactus=Steal a potted cactus #old mission 5
+#old mission 5
+jazz.mission.cactus=Steal a potted cactus
 jazz.mission.milk=Borrow some milk
 #Bartender
 jazz.mission.crates=Find %1% storage crates
