--- a/resource/localization/en-PT/jazztronauts.properties
+++ b/resource/localization/en-PT/jazztronauts.properties
@@ -49,6 +49,15 @@ jazz.weapon.run.upgrade.highjump.desc=With yer Run equipped, duck yerself down f
 #misc
 jazz.weapon.buscaller=Portable Port
 jazz.weapon.physlua=Lua Physics Gun
+#spawnmenu
+jazz.gmodspawn=GMod Spawnmenu
+jazz.gmodspawn.desc=Buy back yer pride an' joy, the gmod spawn menu. Be spawnin' anythin' -- fer a price.
+#holy fuck how did they not have this in their list
+jazz.gmodspawn.props=Props
+jazz.gmodspawn.props.desc=Spawn yer props
+jazz.gmodspawn.weapons.desc=Guns
+jazz.gmodspawn.sandbox=Sandbox Spawnmenu
+jazz.gmodspawn.sandbox.desc=Salty sea dogs?
 #==============================================================================
 #	HUD/HUB
 #==============================================================================
@@ -116,7 +125,8 @@ jazz.mission.gasbeer=Pilfer %1% jerrycans and bottles o' rum
 jazz.mission.chems=Ransack %1% assorted substances
 jazz.mission.paint=Loot %1% buckets o' paint
 jazz.mission.drk=Kidnap Dr. Kleiner
-jazz.mission.cactus=Get yerself a potted cactus #old mission 5
+#old mission 5
+jazz.mission.cactus=Get yerself a potted cactus
 jazz.mission.milk=Get yerself some milk
 #Bartender
 jazz.mission.crates=Pilfer %1% cargo crates
