--- a/resource/localization/en-PT/jazztronauts.properties
+++ b/resource/localization/en-PT/jazztronauts.properties
@@ -15,6 +15,7 @@ jazz.cat.ash=Ash
 jazz.weapon.category=Jazztronauts
 #Prop Snatcher
 jazz.weapon.snatcher=Prop Pilferer
+jazz.weapon.snatcher.desc=Pilferin' Makes Me Ship-Shape
 jazz.weapon.snatcher.upgrade.cone=Aim Cone
 jazz.weapon.snatcher.upgrade.cone.desc=Be makin' yer aim cone bigger, so ye can pilfer easy.
 jazz.weapon.snatcher.upgrade.range=Pilfer Range
@@ -48,6 +49,7 @@ jazz.weapon.run.upgrade.highjump=High Jump
 jazz.weapon.run.upgrade.highjump.desc=With yer Run equipped, duck yerself down fer a few seconds ta charge up a super jump!
 #misc
 jazz.weapon.buscaller=Portable Port
+jazz.weapon.buscaller.desc=Sailin' the Seven Seas
 jazz.weapon.physlua=Lua Physics Gun
 #spawnmenu
 jazz.gmodspawn=GMod Spawnmenu
