--- a/resource/localization/en/jazztonauts.properties
+++ b/resource/localization/en/jazztonauts.properties
@@ -15,6 +15,7 @@ jazz.cat.ash=Ash
 jazz.weapon.category=Jazztronauts
 #Prop Snatcher
 jazz.weapon.snatcher=Prop Snatcher
+jazz.weapon.snatcher.desc=Snatchin' Makes Me Feel Good
 jazz.weapon.snatcher.upgrade.cone=Aim Cone
 jazz.weapon.snatcher.upgrade.cone.desc=Increase the radius of your center aim cone, so you can see and steal with minimal effort.
 jazz.weapon.snatcher.upgrade.range=Steal Range
@@ -49,6 +50,7 @@ jazz.weapon.run.upgrade.highjump=Charge Jump
 jazz.weapon.run.upgrade.highjump.desc=With Run equipped, crouch down for a few seconds to charge up a super jump!
 #misc
 jazz.weapon.buscaller=Portable Bus Stop
+jazz.weapon.buscaller.desc=Need a ride?
 jazz.weapon.physlua=Lua Physics Gun
 #spawnmenu
 jazz.gmodspawn=GMod Spawnmenu
