Feed message update
Death messages now much more accurately describe what killed the player and how

Feed background now better adjusts to size of text within it

Trolley names are now localized (and actually used)

Trolleys do DMG_VEHICLE in addition to DMG_CRUSH

--- a/resource/localization/en-PT/jazztronauts.properties
+++ b/resource/localization/en-PT/jazztronauts.properties
@@ -92,10 +92,14 @@ jazz.levelselect.fail.nomap=SEARCH FAILURE - ADDON HAS NO CHARTS
 jazz.levelselect.fail.network=SEARCH FAILURE - FAILED TO DOWNLOAD
 jazz.levelselect.fail.nospace=SEARCH FAILURE - DISK FULL
 jazz.levelselect.merge=MERGIN' WORL'S
-jazz.death.fall=Avast, %1% walked the plank
+jazz.death.fall=Avast, %1% fell from th' crow's nest
+jazz.death.drown=Avast, %1% walked the plank
 jazz.death.self=Avast, %1% done themself in
-jazz.death.killer=Avast, %1%, killed by %2%!
+jazz.death.killer=Avast, %1%, %2% by %3%!
+jazz.death.weapon=th' %2% o' %1%
 jazz.death.generic=Avast, %1% t'was lost ta sea
+jazz.death.propchute=th' booty dropper
+jazz.death.selector=settin' sail a little too early
 jazz.message.shard=%1% LOOTED a shard
 jazz.message.stole=%1% PLUNDERED %2% %3%
 jazz.message.brush=brush
@@ -177,3 +181,8 @@ jazz.gamemode.wait=Wait fer yer crewmates at the start of a journey
 jazz.gamemode.wait.help=Whether or not ta enable the waitin' for crewmates whiteboard at all.
 jazz.gamemode.localaddons=Include local stash in chart randomizer
 jazz.gamemode.localaddons.help=If enabled, charts from yer local workshop stash will be included when lookin' fer a chart.
+#==============================================================================
+#	ENTITIES
+#==============================================================================
+jazz_bus_explore=Th' Ship
+jazz_bus_hub=Th' Ship
