--- a/resource/localization/en/jazztonauts.properties
+++ b/resource/localization/en/jazztonauts.properties
@@ -24,7 +24,6 @@ jazz.weapon.snatcher.upgrade.auto=Auto-Auto Aim
 jazz.weapon.snatcher.upgrade.auto.desc=Hold down left click to automate picking up many props at a time.
 jazz.weapon.snatcher.upgrade.world=Ultimate Aim
 jazz.weapon.snatcher.upgrade.world.desc=No matter where you aim, you're picking something up. Hold right click to steal world brushes
-#'
 jazz.weapon.snatcher.upgrade.multi=Multi Tasking
 jazz.weapon.snatcher.upgrade.multi.desc=Multi-task by being able to both steal world brushes and props at the same time
 jazz.weapon.snatcher.upgrade.wspeed=World Stealing Speed
@@ -94,9 +93,13 @@ jazz.levelselect.fail.network=SCAN FAILURE - FAILED TO DOWNLOAD
 jazz.levelselect.fail.nospace=SCAN FAILURE - DISK FULL
 jazz.levelselect.merge=MERGING WORLDS
 jazz.death.fall=R.I.P. %1%, fell from a high place
+jazz.death.drown=R.I.P. %1%, couldn't breathe underwater
 jazz.death.self=R.I.P. %1%, they suicided
-jazz.death.killer=R.I.P. %1%, killed by %2%
+jazz.death.killer=R.I.P. %1%, %2% by %3%
+jazz.death.weapon=%1%'s %2%
 jazz.death.generic=R.I.P. %1%, died somehow
+jazz.death.propchute=the prop chute
+jazz.death.selector=jumping in the selector
 jazz.message.shard=%1% FOUND a shard
 jazz.message.stole=%1% STOLE %2% %3%
 jazz.message.brush=brush
@@ -178,3 +181,8 @@ jazz.gamemode.wait=Wait for players at the start of a level
 jazz.gamemode.wait.help=Whether or not to enable the waiting for players whiteboard at all.
 jazz.gamemode.localaddons=Include local addons in map randomizer
 jazz.gamemode.localaddons.help=If enabled, maps from locally installed workshop addons will be included when rolling for a map.
+#==============================================================================
+#	ENTITIES
+#==============================================================================
+jazz_bus_explore=The Trolley
+jazz_bus_hub=The Trolley
