--- a/resource/localization/en-PT/jazztronauts.properties
+++ b/resource/localization/en-PT/jazztronauts.properties
@@ -98,8 +98,8 @@ jazz.death.self=Avast, %1% done themself in
 jazz.death.killer=Avast, %1%, %2% by %3%!
 jazz.death.weapon=th' %2% o' %1%
 jazz.death.generic=Avast, %1% t'was lost ta sea
-jazz.death.propchute=th' booty dropper
-jazz.death.selector=settin' sail a little too early
+jazz.death.propchute=Avast, %1% be takin' a booty shower
+jazz.death.selector=Avast, %1% be settin' sail a little too early
 jazz.message.shard=%1% LOOTED a shard
 jazz.message.stole=%1% PLUNDERED %2% %3%
 jazz.message.brush=brush
