--- a/resource/localization/en/jazztonauts.properties
+++ b/resource/localization/en/jazztonauts.properties
@@ -98,8 +98,8 @@ jazz.death.self=R.I.P. %1%, they suicided
 jazz.death.killer=R.I.P. %1%, %2% by %3%
 jazz.death.weapon=%1%'s %2%
 jazz.death.generic=R.I.P. %1%, died somehow
-jazz.death.propchute=the prop chute
-jazz.death.selector=jumping in the selector
+jazz.death.propchute=R.I.P. %1%, took a prop shower
+jazz.death.selector=R.I.P. %1%, jumped in the selector
 jazz.message.shard=%1% FOUND a shard
 jazz.message.stole=%1% STOLE %2% %3%
 jazz.message.brush=brush
