Polish jazztronauts.properties
Added a comment after the necessary trailing space, to ensure it isn't auto-removed accidentally

--- a/resource/localization/en-PT/jazztronauts.properties
+++ b/resource/localization/en-PT/jazztronauts.properties
@@ -16,17 +16,17 @@ jazz.weapon.category=Jazztronauts
 #Prop Snatcher
 jazz.weapon.snatcher=Prop Pilferer
 jazz.weapon.snatcher.upgrade.cone=Aim Cone
-jazz.weapon.snatcher.upgrade.cone.desc=Be makin' yer aim cone bigger, so ye can pilfer easy.
+jazz.weapon.snatcher.upgrade.cone.desc=Be makin' yer aim cone bigger, so ye can pilfer easy
 jazz.weapon.snatcher.upgrade.range=Pilfer Range
-jazz.weapon.snatcher.upgrade.range.desc=Be makin' yer booty plunderin' range far'thar.
+jazz.weapon.snatcher.upgrade.range.desc=Be makin' yer booty plunderin' range far'thar
 jazz.weapon.snatcher.upgrade.auto=Auto-Auto Aim
-jazz.weapon.snatcher.upgrade.auto.desc=Hol' down yer left click ta plunder many props at a time.
+jazz.weapon.snatcher.upgrade.auto.desc=Hol' down yer left click ta plunder many props at a time
 jazz.weapon.snatcher.upgrade.world=Ultimate Aim
 jazz.weapon.snatcher.upgrade.world.desc=No matter where ye be, you're pilferin' somethin'. Hol' down yer right click ta pilfer the worl'
-jazz.weapon.snatcher.upgrade.multi=Multi Tasking
-jazz.weapon.snatcher.upgrade.multi.desc=Multi-task by bein' able ta pilfer both worl' brushes an' props at the same time
+jazz.weapon.snatcher.upgrade.multi=Multitasking
+jazz.weapon.snatcher.upgrade.multi.desc=Multitask by bein' able ta pilfer both worl' brushes an' props at the same time
 jazz.weapon.snatcher.upgrade.wspeed=Worl' Plunderin' Speed
-jazz.weapon.snatcher.upgrade.wspeed.desc=Plunder the worl' twice as fast.
+jazz.weapon.snatcher.upgrade.wspeed.desc=Plunder the worl' twice as fast
 #Hacking Goggles
 jazz.weapon.hacker=Hackin' Eyeglass
 jazz.weapon.hacker.desc=Peer inta the inner I/O workin's of the chart
@@ -41,9 +41,9 @@ jazz.weapon.stan.upgrade.speed=Speed
 jazz.weapon.stan.upgrade.speed.desc=Decreases warm up time
 #Run
 jazz.weapon.run=Run
-jazz.weapon.run.desc=Jump high'r an' run fast'r.
+jazz.weapon.run.desc=Jump high'r an' run fast'r
 jazz.weapon.run.upgrade.nofall=Walkin' the Plank-proof
-jazz.weapon.run.upgrade.nofall.desc=If ye fall while yer Run is equipped, yer not takin' even a wee bit'o'fall damage.
+jazz.weapon.run.upgrade.nofall.desc=If ye fall while yer Run is equipped, yer not takin' even a wee bit'o'fall damage
 jazz.weapon.run.upgrade.highjump=High Jump
 jazz.weapon.run.upgrade.highjump.desc=With yer Run equipped, duck yerself down fer a few seconds ta charge up a super jump!
 #misc
@@ -101,9 +101,9 @@ jazz.store.chat=Jus' 'ere ta gab!
 jazz.store.requires=YE BE NEEDIN' %1%
 jazz.store.toollabel=Yarr, Tools
 jazz.store.upgradelabel=Avast, Upgrades
-#mind the leading and/or trailing space!
-jazz.store.listing= %1% - £%2%
-jazz.store.price= £%1% 
+#mind the leading and trailing space!
+jazz.store.listing= %1% - $%2%#
+jazz.store.price= $%1% #
 #==============================================================================
 #	MISSIONS
 #==============================================================================
@@ -160,6 +160,6 @@ jazz.fact.none=Nothin'
 #	GAME MODE
 #==============================================================================
 jazz.gamemode.wait=Wait fer yer crewmates at the start of a journey
-jazz.gamemode.wait.help=Whether or not ta enable the waitin' for crewmates whiteboard at all.
+jazz.gamemode.wait.help=Whether or not ta enable the waitin' for crewmates whiteboard at all
 jazz.gamemode.localaddons=Include local stash in chart randomizer
-jazz.gamemode.localaddons.help=If enabled, charts from yer local workshop stash will be included when lookin' fer a chart.
+jazz.gamemode.localaddons.help=If enabled, charts from yer local workshop stash will be included when lookin' fer a chart
