--- a/resource/localization/en/jazztonauts.properties
+++ b/resource/localization/en/jazztonauts.properties
@@ -16,23 +16,23 @@ jazz.weapon.category=Jazztronauts
 #Prop Snatcher
 jazz.weapon.snatcher=Prop Snatcher
 jazz.weapon.snatcher.upgrade.cone=Aim Cone
-jazz.weapon.snatcher.upgrade.cone.desc=Increase the radius of your center aim cone, so you can see and steal with minimal effort.
+jazz.weapon.snatcher.upgrade.cone.desc=Increase the radius of your center aim cone, so you can see and steal with minimal effort
 jazz.weapon.snatcher.upgrade.range=Steal Range
-jazz.weapon.snatcher.upgrade.range.desc=Increase the range from which you can steal things.
+jazz.weapon.snatcher.upgrade.range.desc=Increase the range from which you can steal things
 jazz.weapon.snatcher.upgrade.auto=Auto-Auto Aim
-jazz.weapon.snatcher.upgrade.auto.desc=Hold down left click to automate picking up many props at a time.
+jazz.weapon.snatcher.upgrade.auto.desc=Hold down left click to automate picking up many props at a time
 jazz.weapon.snatcher.upgrade.world=Ultimate Aim
 jazz.weapon.snatcher.upgrade.world.desc=No matter where you aim, you're picking something up. Hold right click to steal world brushes
 #'
-jazz.weapon.snatcher.upgrade.multi=Multi Tasking
-jazz.weapon.snatcher.upgrade.multi.desc=Multi-task by being able to both steal world brushes and props at the same time
+jazz.weapon.snatcher.upgrade.multi=Multitasking
+jazz.weapon.snatcher.upgrade.multi.desc=Multitask by being able to both steal world brushes and props at the same time
 jazz.weapon.snatcher.upgrade.wspeed=World Stealing Speed
 jazz.weapon.snatcher.upgrade.wspeed.desc=Steal the world 100% faster
 #Hacking Goggles
 jazz.weapon.hacker=Hacking Goggles
 jazz.weapon.hacker.desc=Peek into the inner I/O workings of the map
 jazz.weapon.hacker.upgrade.io=Privilege Escalation
-jazz.weapon.hacker.upgrade.io.desc=Enables write access on the Hacking Goggles to manually trigger map I/O events
+jazz.weapon.hacker.upgrade.io.desc=Enables write access on the Goggles to manually trigger map I/O events
 #Stan
 jazz.weapon.stan=Stan
 jazz.weapon.stan.desc=Teleport through solid walls, brushes, and playerclips by summoning the power of Stan
@@ -42,9 +42,9 @@ jazz.weapon.stan.upgrade.speed=Speed
 jazz.weapon.stan.upgrade.speed.desc=Decreases warm up time
 #Run
 jazz.weapon.run=Run
-jazz.weapon.run.desc=Jump higher and run faster.
+jazz.weapon.run.desc=Jump higher and run faster
 jazz.weapon.run.upgrade.nofall=Ignore Fall Damage
-jazz.weapon.run.upgrade.nofall.desc=Fall from any height, and while Run is equipped, you will take zero fall damage.
+jazz.weapon.run.upgrade.nofall.desc=Fall from any height, and while Run is equipped, you will take zero fall damage
 jazz.weapon.run.upgrade.highjump=Charge Jump
 jazz.weapon.run.upgrade.highjump.desc=With Run equipped, crouch down for a few seconds to charge up a super jump!
 #misc
@@ -102,9 +102,9 @@ jazz.store.chat=Just here to chat!
 jazz.store.requires=REQUIRES %1%
 jazz.store.toollabel=Tools
 jazz.store.upgradelabel=Upgrades
-#mind the leading and/or trailing space!
-jazz.store.listing= %1% - $%2%
-jazz.store.price= $%1% 
+#mind the leading and trailing space!
+jazz.store.listing= %1% - $%2%#
+jazz.store.price= $%1% #
 #==============================================================================
 #	MISSIONS
 #==============================================================================
@@ -162,9 +162,9 @@ jazz.fact.none=None
 #	GAME MODE
 #==============================================================================
 jazz.gamemode.wait=Wait for players at the start of a level
-jazz.gamemode.wait.help=Whether or not to enable the waiting for players whiteboard at all.
+jazz.gamemode.wait.help=Whether or not to enable the waiting for players whiteboard at all
 jazz.gamemode.localaddons=Include local addons in map randomizer
-jazz.gamemode.localaddons.help=If enabled, maps from locally installed workshop addons will be included when rolling for a map.
+jazz.gamemode.localaddons.help=If enabled, maps from locally installed workshop addons will be included when rolling for a map
 #==============================================================================
 #	LEVEL SELECT MULTI-LANGUAGE (no need to add these to other files!) --TODO: just running these through google translate for testing purposes. Need to make sure they're proper translations!
 #==============================================================================
