Fix pirate currency erasure
Didn't even notice this was there until now! I just copy pasted that part from the normal version since I didn't think it'd be different. Glad I double checked!

--- a/resource/localization/en-PT/jazztronauts.properties
+++ b/resource/localization/en-PT/jazztronauts.properties
@@ -102,8 +102,8 @@ jazz.store.requires=YE BE NEEDIN' %1%
 jazz.store.toollabel=Yarr, Tools
 jazz.store.upgradelabel=Avast, Upgrades
 #mind the leading and trailing space!
-jazz.store.listing= %1% - $%2%#
-jazz.store.price= $%1% #
+jazz.store.listing= %1% - £%2%#
+jazz.store.price= £%1% #
 #==============================================================================
 #	MISSIONS
 #==============================================================================
