--- a/resource/localization/en/jazztronauts.properties
+++ b/resource/localization/en/jazztronauts.properties
@@ -47,9 +47,13 @@ jazz.weapon.run.upgrade.nofall=Ignore Fall Damage
 jazz.weapon.run.upgrade.nofall.desc=Fall from any height, and while Run is equipped, you will take zero fall damage
 jazz.weapon.run.upgrade.highjump=Charge Jump
 jazz.weapon.run.upgrade.highjump.desc=With Run equipped, crouch down for a few seconds to charge up a super jump!
+#GMod Spawnmenu
+jazz.weapon.gmodspawnmenu=GMod Spawnmenu
+jazz.weapon.gmodspawnmenu.desc=Buy back your pride and joy, the gmod spawn menu. Spawn anything -- for a price.
 #misc
 jazz.weapon.buscaller=Portable Bus Stop
 jazz.weapon.physlua=Lua Physics Gun
+
 #==============================================================================
 #	HUD/HUB
 #==============================================================================
@@ -103,8 +107,8 @@ jazz.store.requires=REQUIRES %1%
 jazz.store.toollabel=Tools
 jazz.store.upgradelabel=Upgrades
 #mind the leading and trailing space!
-jazz.store.listing= %1% - $%2%#
-jazz.store.price= $%1% #
+jazz.store.listing= %1% - $%2%
+jazz.store.price= $%1%
 #==============================================================================
 #	MISSIONS
 #==============================================================================
@@ -116,7 +120,7 @@ jazz.mission.gasbeer=Collect %1% gas cans and beer bottles
 jazz.mission.chems=Collect %1% random chemicals
 jazz.mission.paint=Collect %1% paintcans
 jazz.mission.drk=Kidnap Dr. Kleiner
-jazz.mission.cactus=Steal a potted cactus #old mission 5
+jazz.mission.cactus=Steal a potted cactus
 jazz.mission.milk=Borrow some milk
 #Bartender
 jazz.mission.crates=Find %1% storage crates
@@ -157,6 +161,7 @@ jazz.fact.staticprops=Static Props:\n%1%
 jazz.fact.entities=Entity Count:\n%1%
 jazz.fact.map=Map Name:\n%1%
 jazz.fact.unknown=Unknown
+jazz.fact.owner=Owner
 jazz.fact.none=None
 #==============================================================================
 #	GAME MODE
