The Localization never ends
Click to Continue...

--- a/resource/localization/en-PT/jazztronauts.properties
+++ b/resource/localization/en-PT/jazztronauts.properties
@@ -10,6 +10,11 @@ jazz.cat.cellist=String Man
 jazz.cat.unknown=???
 jazz.cat.ash=Ash
 #==============================================================================
+#	DIALOG
+#==============================================================================
+#mind the trailing tab!
+jazz.dialog.continue=Click ta sail on...	
+#==============================================================================
 #	WEAPONS
 #==============================================================================
 jazz.weapon.category=Jazztronauts
