--- a/resource/localization/en/jazztronauts.properties
+++ b/resource/localization/en/jazztronauts.properties
@@ -10,6 +10,11 @@ jazz.cat.cellist=Cellist
 jazz.cat.unknown=???
 jazz.cat.ash=Ash
 #==============================================================================
+#	DIALOG
+#==============================================================================
+#mind the trailing tab!
+jazz.dialog.continue=Click to continue...	
+#==============================================================================
 #	WEAPONS
 #==============================================================================
 jazz.weapon.category=Jazztronauts
