--- a/resource/localization/en/jazztronauts.properties
+++ b/resource/localization/en/jazztronauts.properties
@@ -81,6 +81,8 @@ jazz.shards.partialcollected=%1%/%2% shards collected
 jazz.shards.one=1 shard remains
 jazz.shards.none=Nothing remains
 jazz.shards.all=Collected all %1% shards!
+jazz.blacksharddoor.remain=%1% ◼ Remain
+jazz.blacksharddoor.one=%1% ◼ Remains
 jazz.tank.shard=%1% shard
 jazz.tank.shards=%1% shards
 jazz.tank.need=%1% needed
