Factgen Time and Date localization
Converted from set format to sending over a laundry list of date/time info that the localization can then decide on using.

--- a/resource/localization/en-PT/jazztronauts.properties
+++ b/resource/localization/en-PT/jazztronauts.properties
@@ -164,17 +164,19 @@ jazz.mission.radios=Swindle %1% radios
 #	FACT SCREENS
 #==============================================================================
 jazz.fact.views=Peepin' eyes:\n%1%
-jazz.fact.filesize=Filesize:\n%1%
-jazz.fact.favs=Favorites:\n%1%
+jazz.fact.filesize=Size on Yer Disk:\n%1%
+jazz.fact.favs=Favourites:\n%1%
 jazz.fact.subs=Subscriptions:\n%1%
-jazz.fact.uploaded=Upload Date:\n%1%
-jazz.fact.modified=Last Altered:\n%1%
+#The info coming in for these dates/times is 1 Year (full), 2 Month (number), 3 Day, 4 Hour (24hr), 5 Minute, 6 Second,
+#7 Year (two-digit), 8 Month (Name), 9 Month (Abbreviated), 10 Hour (12hr), 11 AM/PM
+jazz.fact.uploaded=Upload Date:\n%3% o' %8%,\nback in '%7%,\n'round %10% %11%
+jazz.fact.modified=Last Altered:\n%3% o' %8%,\nback in '%7%,\n'round %10% %11%
 jazz.fact.tags=Tags:\n%1%
 jazz.fact.mapsize=Chart Size:\n%1% breadth\n%2% lengthwise\n%3% depth
 jazz.fact.skybox=Skies:\n%1%
 jazz.fact.metadata=Chart Comment:\n%1%
 jazz.fact.brushes=Number o'\n Brushes:\n%1%
-jazz.fact.staticprops=Static Props:\n%1%
+jazz.fact.staticprops=Landlocked Props:\n%1%
 jazz.fact.entities=Number o'\n Entities:\n%1%
 jazz.fact.map=Chart Name:\n%1%
 jazz.fact.unknown=The Murky Unknown
