--- a/resource/localization/en/jazztronauts.properties
+++ b/resource/localization/en/jazztronauts.properties
@@ -169,8 +169,10 @@ jazz.fact.views=Views:\n%1%
 jazz.fact.filesize=Filesize:\n%1%
 jazz.fact.favs=Favorites:\n%1%
 jazz.fact.subs=Subscriptions:\n%1%
-jazz.fact.uploaded=Upload Date:\n%1%
-jazz.fact.modified=Last Modified:\n%1%
+#The info coming in for these dates/times is 1 Year (full), 2 Month (number), 3 Day, 4 Hour, 5 Minute, 6 Second,
+#7 Year (two-digit), 8 Month (Name), 9 Month (Abbreviated), 10 Hour (12hr), 11 AM/PM
+jazz.fact.uploaded=Upload Date:\n%4%:%5%:%6% - %3%/%2%/%1%
+jazz.fact.modified=Last Modified:\n%4%:%5%:%6% - %3%/%2%/%1%
 jazz.fact.tags=Tags:\n%1%
 jazz.fact.mapsize=Map Size:\n%1% wide\n%2% deep\n%3% tall
 jazz.fact.skybox=Skybox:\n%1%
