Workshop Download Fix
Fixes issue where a workshop id of nil or 0 on the browser locks up the level selector if it's selected (usually happens after launching server on a local map and then returning to the hub)

Also a fix so fact screen shows listed sub-error for download failures (not bothering to localize these at the moment, but we *could*).

--- a/resource/localization/en-PT/jazztronauts.properties
+++ b/resource/localization/en-PT/jazztronauts.properties
@@ -94,7 +94,7 @@ jazz.levelselect.scan=SEARCHIN'
 jazz.levelselect.done=SEARCH DONE
 jazz.levelselect.fail=SEARCHIN' FAILED
 jazz.levelselect.fail.nomap=SEARCH FAILURE - ADDON HAS NO CHARTS
-jazz.levelselect.fail.network=SEARCH FAILURE - FAILED TO DOWNLOAD
+jazz.levelselect.fail.network=SEARCH FAILURE - FAILED TO DOWNLOAD\n\n%1%
 jazz.levelselect.fail.nospace=SEARCH FAILURE - DISK FULL
 jazz.levelselect.merge=MERGIN' WORL'S
 jazz.death.fall=Avast, %1% fell from th' crow's nest
