--- a/resource/localization/en/jazztronauts.properties
+++ b/resource/localization/en/jazztronauts.properties
@@ -96,7 +96,7 @@ jazz.levelselect.scan=SCANNING
 jazz.levelselect.done=SCAN COMPLETE
 jazz.levelselect.fail=SCAN FAILURE
 jazz.levelselect.fail.nomap=SCAN FAILURE - ADDON HAS NO MAPS
-jazz.levelselect.fail.network=SCAN FAILURE - FAILED TO DOWNLOAD
+jazz.levelselect.fail.network=SCAN FAILURE - FAILED TO DOWNLOAD\n\n%1%
 jazz.levelselect.fail.nospace=SCAN FAILURE - DISK FULL
 jazz.levelselect.merge=MERGING WORLDS
 jazz.death.fall=R.I.P. %1%, fell from a high place
