--- a/resource/localization/en/jazztronauts.properties
+++ b/resource/localization/en/jazztronauts.properties
@@ -114,6 +114,8 @@ jazz.message.brushes=brushes
 jazz.message.prop=prop
 jazz.message.props=props
 jazz.bus.bar=the bar
+jazz.respawn.playerstart=Map Spawnpoint
+jazz.respawn.switch=%1% to switch
 #==============================================================================
 #	STORE
 #==============================================================================
