--- a/resource/localization/en/jazztronauts.properties
+++ b/resource/localization/en/jazztronauts.properties
@@ -198,3 +198,8 @@ jazz.gamemode.localaddons.help=If enabled, maps from locally installed workshop 
 #==============================================================================
 jazz_bus_explore=The Trolley
 jazz_bus_hub=The Trolley
+#==============================================================================
+#	KEYS
+#==============================================================================
+jazz.MOUSE1=Left click
+jazz.MOUSE2=Right click
