Add PvP and collision toggles

--- a/resource/localization/en/jazztronauts.properties
+++ b/resource/localization/en/jazztronauts.properties
@@ -170,6 +170,8 @@ jazz.gamemode.wait=Wait for players at the start of a level
 jazz.gamemode.wait.help=Whether or not to enable the waiting for players whiteboard at all
 jazz.gamemode.localaddons=Include local addons in map randomizer
 jazz.gamemode.localaddons.help=If enabled, maps from locally installed workshop addons will be included when rolling for a map
+# pvp name provided by sandbox
+jazz.gamemode.pvp.help=If enabled, players will collide and be able to hurt each other
 #==============================================================================
 #	LEVEL SELECT MULTI-LANGUAGE (no need to add these to other files!) --TODO: just running these through google translate for testing purposes. Need to make sure they're proper translations!
 #==============================================================================
