--- a/resource/localization/en/jazztronauts-killfeed.properties
+++ b/resource/localization/en/jazztronauts-killfeed.properties
@@ -58,6 +58,7 @@ jazz.npc_rollermine=a roller mine
 jazz.npc_vortigaunt=a Vortigaunt
 jazz.npc_sniper=a sniper
 jazz.monster_islave=a Vortigaunt
+jazz.monster_alien_slave=a Vortigaunt
 
 #==============================================================================
 #	Entities
