Add custom weapon icons
Also adds Autoicons support (giving Stan a worldmodel in the process), and added descriptions for the snatcher and bus stop

--- a/resource/localization/en-PT/jazztronauts.properties
+++ b/resource/localization/en-PT/jazztronauts.properties
@@ -15,6 +15,7 @@ jazz.cat.ash=Ash
 jazz.weapon.category=Jazztronauts
 #Prop Snatcher
 jazz.weapon.snatcher=Prop Pilferer
+jazz.weapon.snatcher.desc=Plunder junk, gather booty
 jazz.weapon.snatcher.upgrade.cone=Aim Cone
 jazz.weapon.snatcher.upgrade.cone.desc=Be makin' yer aim cone bigger, so ye can pilfer easy
 jazz.weapon.snatcher.upgrade.range=Pilfer Range
@@ -35,6 +36,7 @@ jazz.weapon.hacker.upgrade.io.desc=Lets ye manually trigger I/O events on the ch
 #Stan
 jazz.weapon.stan=Stan
 jazz.weapon.stan.desc=Sail through solid walls, brushes, an' playerclips by summonin' th' power of Stan
+jazz.weapon.stan.desc.short=Sail through snags by summonin' th' power of Stan
 jazz.weapon.stan.upgrade.range=Range
 jazz.weapon.stan.upgrade.range.desc=Be gettin' more range and depth of walls ta sail through
 jazz.weapon.stan.upgrade.speed=Speed
@@ -48,6 +50,7 @@ jazz.weapon.run.upgrade.highjump=High Jump
 jazz.weapon.run.upgrade.highjump.desc=With yer Run equipped, duck yerself down fer a few seconds ta charge up a super jump!
 #misc
 jazz.weapon.buscaller=Portable Port
+jazz.weapon.buscaller.desc=Where we be sailin', we don' need seas
 jazz.weapon.physlua=Lua Physics Gun
 #==============================================================================
 #	HUD/HUB
