--- a/resource/localization/en/jazztronauts.properties
+++ b/resource/localization/en/jazztronauts.properties
@@ -15,6 +15,7 @@ jazz.cat.ash=Ash
 jazz.weapon.category=Jazztronauts
 #Prop Snatcher
 jazz.weapon.snatcher=Prop Snatcher
+jazz.weapon.snatcher.desc=Steal trash, get cash
 jazz.weapon.snatcher.upgrade.cone=Aim Cone
 jazz.weapon.snatcher.upgrade.cone.desc=Increase the radius of your center aim cone, so you can see and steal with minimal effort
 jazz.weapon.snatcher.upgrade.range=Steal Range
@@ -36,6 +37,7 @@ jazz.weapon.hacker.upgrade.io.desc=Enables write access on the Goggles to manual
 #Stan
 jazz.weapon.stan=Stan
 jazz.weapon.stan.desc=Teleport through solid walls, brushes, and playerclips by summoning the power of Stan
+jazz.weapon.stan.desc.short=Teleport through walls by summoning the power of Stan
 jazz.weapon.stan.upgrade.range=Range
 jazz.weapon.stan.upgrade.range.desc=Increases range and depth of walls to travel through
 jazz.weapon.stan.upgrade.speed=Speed
@@ -52,6 +54,7 @@ jazz.weapon.gmodspawnmenu=GMod Spawnmenu
 jazz.weapon.gmodspawnmenu.desc=Buy back your pride and joy, the gmod spawn menu. Spawn anything -- for a price.
 #misc
 jazz.weapon.buscaller=Portable Bus Stop
+jazz.weapon.buscaller.desc=Where we're going, we don't need roads
 jazz.weapon.physlua=Lua Physics Gun
 
 #==============================================================================
