Revamp store UI

--- a/resource/localization/en/jazztronauts.properties
+++ b/resource/localization/en/jazztronauts.properties
@@ -47,9 +47,9 @@ jazz.weapon.run.upgrade.nofall=Ignore Fall Damage
 jazz.weapon.run.upgrade.nofall.desc=Fall from any height, and while Run is equipped, you will take zero fall damage
 jazz.weapon.run.upgrade.highjump=Charge Jump
 jazz.weapon.run.upgrade.highjump.desc=With Run equipped, crouch down for a few seconds to charge up a super jump!
-#GMod Spawnmenu
-jazz.weapon.gmodspawnmenu=GMod Spawnmenu
-jazz.weapon.gmodspawnmenu.desc=Buy back your pride and joy, the gmod spawn menu. Spawn anything -- for a price.
+#spawnmenu
+jazz.gmodspawn=Sandbox Spawnmenu
+jazz.gmodspawn.desc=Buy back your pride and joy, the full spawnmenu Garry intended.\nSpawn anything -- for a price.
 #misc
 jazz.weapon.buscaller=Portable Bus Stop
 jazz.weapon.physlua=Lua Physics Gun
@@ -103,12 +103,12 @@ jazz.store.welcome=Welcome back. What can I get you?
 jazz.store.upgrade=Upgrade tools!
 jazz.store.store=Store, please!
 jazz.store.chat=Just here to chat!
-jazz.store.requires=REQUIRES %1%
+jazz.store.requires=Requires %1%!
+jazz.store.purchased=Already purchased!
 jazz.store.toollabel=Tools
 jazz.store.upgradelabel=Upgrades
-#mind the leading and trailing space!
-jazz.store.listing= %1% - $%2%
-jazz.store.price= $%1%
+jazz.store.listing=%1% - $%2%
+jazz.store.price=$%1%
 #==============================================================================
 #	MISSIONS
 #==============================================================================
