--- a/resource/localization/tr/jazztronauts.properties
+++ b/resource/localization/tr/jazztronauts.properties
@@ -113,7 +113,7 @@ jazz.store.price=%1%$
 #	MISSIONS
 #==============================================================================
 jazz.mission.finished=BİTTİ!!!
-jazz.mission.locked=<Locked>
+jazz.mission.locked=<Kilitli>
 #Cellist
 jazz.mission.drums=%1% yağ varili toplayın
 jazz.mission.gasbeer=%1% benzin bidonu ve bira şişesi topla
@@ -173,25 +173,29 @@ jazz.gamemode.localaddons.help=Etkinleştirilirse, bir harita rastgele seçilirk
 #==============================================================================
 #	LEVEL SELECT MULTI-LANGUAGE (no need to add these to other files!) --TODO: just running these through google translate for testing purposes. Need to make sure they're proper translations!
 #==============================================================================
-jazz.levelselect.fail.en=TARAMA HATASI
+jazz.levelselect.fail.en=SCAN FAILURE
+jazz.levelselect.fail.tr=TARAMA HATASI
 jazz.levelselect.fail.jp=スキャン失敗
 jazz.levelselect.fail.fr=ÉCHEC DE L'ANALYSE
 jazz.levelselect.fail.es=Fallo DE ESCANEO
 jazz.levelselect.fail.uk=ПОМИЛКА СКАНУВАННЯ
 #nomap
-jazz.levelselect.fail.nomap.en=TARAMA HATASI - EKLENTİDE HARİTA YOK
+jazz.levelselect.fail.nomap.en=SCAN FAILURE - ADDON HAS NO MAPS
+jazz.levelselect.fail.nomap.tr=TARAMA HATASI - EKLENTİDE HARİTA YOK
 jazz.levelselect.fail.nomap.jp=スキャン失敗 - アドオンにはマップがありません
 jazz.levelselect.fail.nomap.fr=ÉCHEC DE L'ANALYSE - L'ADDONN'A PAS DE CARTES
 jazz.levelselect.fail.nomap.es=FALLO DE ESCANEO - AÑADIR NO TIENE MAPAS
 jazz.levelselect.fail.nomap.uk=ПОМИЛКА СКАНУВАНЯ - ДОПОВНЕННЯ НЕ МАɔ КАРТ
 #network
-jazz.levelselect.fail.network.en=TARAMA HATASI - İNDİRİLEMEDİ
+jazz.levelselect.fail.network.en=SCAN FAILURE - FAILED TO DOWNLOAD
+jazz.levelselect.fail.network.tr=TARAMA HATASI - İNDİRİLEMEDİ
 jazz.levelselect.fail.network.jp=スキャン失敗 - ダウンロードに失敗しました
 jazz.levelselect.fail.network.fr=ÉCHEC DE L'ANALYSE - ÉCHEC DU TÉLÉCHARGEMENT
 jazz.levelselect.fail.network.es=FALLO DE ESCANEO - HATA AL DESCARGAR
 jazz.levelselect.fail.network.uk=ПОМИЛКА СКАНУВАНЯ - НЕ ВДАЛОСЯ ЗАВАНТАЖИТИ
 #nospace
-jazz.levelselect.fail.nospace.en=TARAMA HATASI - DISK DOLU
+jazz.levelselect.fail.nospace.en=SCAN FAILURE - DISK FULL
+jazz.levelselect.fail.nospace.tr=TARAMA HATASI - DISK DOLU
 jazz.levelselect.fail.nospace.jp=スキャン失敗 - ディスクがいっぱいです
 jazz.levelselect.fail.nospace.fr=ÉCHEC DE L'ANALYSE - DISQUE PLEIN
 jazz.levelselect.fail.nospace.es=FALLO DE ESCANEO - DISCO LLENO
